[gd_scene load_steps=14 format=2]

[ext_resource path="res://game/player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/main.gd" type="Script" id=2]
[ext_resource path="res://game/asteroids/AsteroidSpawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/img/ship-0.png" type="Texture" id=4]
[ext_resource path="res://game/HUD.gd" type="Script" id=5]
[ext_resource path="res://assets/Pixeled.ttf" type="DynamicFontData" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 819, 28.3125 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 820.5, 21 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 41, 534.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 33.75, 565 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Ship:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "blink"
length = 0.7
tracks/0/type = "value"
tracks/0/path = NodePath("Ship:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true ]
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 532, 316 )

[node name="AsteroidSpawner" parent="." instance=ExtResource( 3 )]

[node name="Limits" type="Node2D" parent="."]

[node name="LimitTop" type="Area2D" parent="Limits"]
position = Vector2( 288, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/LimitTop"]
position = Vector2( 248, -262.312 )
shape = SubResource( 1 )

[node name="LimitBottom" type="Area2D" parent="Limits"]
position = Vector2( 285, 621 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/LimitBottom"]
position = Vector2( 297.5, 179 )
shape = SubResource( 2 )

[node name="LimitLeft" type="Area2D" parent="Limits"]
position = Vector2( -300, 272 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/LimitLeft"]
position = Vector2( 39, -21.5 )
shape = SubResource( 4 )

[node name="LimitRight" type="Area2D" parent="Limits"]
position = Vector2( 1161, 318 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits/LimitRight"]
position = Vector2( 190, -75 )
shape = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Ship" type="TextureRect" parent="CanvasLayer/HUD"]
modulate = Color( 0.784314, 0.784314, 0.784314, 1 )
margin_left = 11.0
margin_top = 10.0
margin_right = 158.0
margin_bottom = 68.0
texture = ExtResource( 4 )
stretch_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HUD"]
anims/RESET = SubResource( 5 )
anims/blink = SubResource( 6 )

[node name="BlinkTimer" type="Timer" parent="CanvasLayer/HUD"]

[node name="GameTimer" type="Timer" parent="CanvasLayer/HUD"]

[node name="Points" type="Label" parent="CanvasLayer/HUD"]
margin_left = 511.0
margin_top = 6.0
margin_right = 551.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 7 )
text = "0"

[connection signal="timeout" from="CanvasLayer/HUD/BlinkTimer" to="CanvasLayer/HUD" method="_on_Timer_timeout"]
